# entraws

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  lefthook.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pinact.yaml  ruleset-main.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deny.yml  lint-workflows.yml  pinact.yml  release.yml  scorecard.yml
docs/: credential-process.md
docs/adr/: 0001-credential-output-modes.md  0002-aws-sdk-sts-rustls-0-23-only.md  README.md
src/: aws.rs  client_credentials.rs  config.rs  constants.rs  credentials_cmd.rs  error.rs  http.rs  main.rs  oidc.rs  pkce.rs  server.rs  status_cmd.rs  token.rs
src/credential/: aws_config.rs  cache.rs  file.rs  keychain.rs  mod.rs  sink.rs  source.rs
templates/: callback.html
