[package]
name = "entraws"
version = "0.1.0"
edition = "2021"
description = "AWS STS OIDC Driver - Get temporary AWS credentials via OpenID Connect"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
aws-sdk-sts = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.10"
webbrowser = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_urlencoded = "0.7"
rust-ini = "0.21"
subtle = "2"
