[package]
name = "entraws"
version = "0.1.0"
edition = "2021"
description = "AWS STS OIDC Driver - Get temporary AWS credentials via OpenID Connect"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
# Disable the default `rustls` feature on aws-sdk-sts. Its default pulls in
# aws-smithy-http-client's `legacy-rustls-ring`, which transitively depends on
# rustls 0.21 + rustls-webpki 0.101.7 — a branch that no longer receives
# security fixes for RUSTSEC-2026-0098/0099. `default-https-client` alone
# (the aws-lc-rs backed rustls 0.23 stack) is enough for our STS calls.
aws-sdk-sts = { version = "1", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
    "behavior-version-latest",
] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
base64 = "0.22"
sha2 = "0.11"
rand = "0.9"
webbrowser = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_urlencoded = "0.7"
rust-ini = "0.21"
subtle = "2"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[dev-dependencies]
wiremock = "0.6"
